@@ -113,5 +113,5 @@ jobs:
           serviceCredentialsFileContent: ${{secrets.CREDENTIAL_FILE_CONTENT}}
           groups: testers
           file: ./apps/multichoice/build/app/outputs/flutter-apk/app-${{ inputs.environment_flag }}.apk
-          releaseNotesFile: ./apps/multichoice/CHANGELOG.txt
+          releaseNotesFile: ./CHANGELOG.md
           debug: true
