@@ -1,0 +1,12 @@
+{
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "multichoice (integration test)",
+            "request": "launch",
+            "type": "dart",
+            "program": "apps/multichoice/test_driver/integration_test.dart",
+            "preLaunchTask": "Flutter Integration Test"
+        }
+    ]
+}
