@@ -84,6 +84,22 @@ scripts:
       flutter: true
       scope: ["integration"]
 
+  coverage:all:
+    description: |
+      Run all tests and generate coverage reports.
+    run: |
+      melos run coverage:core --no-select && melos run coverage:multichoice --no-select
+
+  coverage:integration:
+    run: flutter test -j 1 --coverage
+    exec:
+      failFast: true
+      concurrency: 1
+      orderDependents: true
+    packageFilters:
+      flutter: true
+      scope: ["integration"]
+
   coverage:core:
     run: flutter test -j 1 --coverage
     exec:
@@ -92,7 +108,7 @@ scripts:
       orderDependents: true
     packageFilters:
       flutter: true
-      scope: "core"
+      scope: ["core"]
 
   coverage:multichoice:
     run: flutter test -j 1 --coverage
@@ -102,7 +118,7 @@ scripts:
       orderDependents: true
     packageFilters:
       flutter: true
-      scope: "core"
+      scope: ["multichoice"]
 
   coverage:multichoice:windows:
     run: flutter test -j 1 --coverage && perl "C:\\ProgramData\\chocolatey\\lib\\lcov\\tools\\bin\\genhtml" --no-function-coverage -o coverage\html coverage\lcov.info && start coverage\html\index.html
