@@ -1,0 +1,11 @@
+import 'package:flutter_test/flutter_test.dart';
+
+void main() {
+  group('DatabaseService Tests', () {
+    test('Singleton instance should be the same', () {});
+
+    test('Initial database should be empty', () {});
+
+    test('Adding entries to the database', () {});
+  });
+}
