@@ -1,0 +1,6 @@
+# Set up integration tests
+
+- Add integration tests
+- Setup integration tests
+- Add tasks.json file
+- Update _build-android-app file to use this ROOT changelog
